# repocrunch

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: docker.yml  publish.yml
src/repocrunch/: __init__.py  analyzer.py  api.py  cli.py  client.py  detection.py  mcp_server.py  models.py
src/repocrunch/extractors/: __init__.py  architecture.py  health.py  metadata.py  security.py  tech_stack.py
src/repocrunch/parsers/: __init__.py  build_gradle.py  cargo_toml.py  cmakelists.py  gemfile.py  go_mod.py  package_json.py  pom_xml.py  pyproject_toml.py  requirements_txt.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_client.py  test_models.py
tests/fixtures/: repo_data.json  tree_data.json
tests/test_extractors/: test_architecture.py  test_health.py
tests/test_parsers/: test_build_gradle.py  test_cargo_toml.py  test_cmakelists.py  test_gemfile.py  test_go_mod.py  test_package_json.py  test_pom_xml.py  test_pyproject_toml.py  test_requirements_txt.py
