[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repocrunch"
version = "0.1.1"
description = "Analyze GitHub repos into structured JSON. No AI, fully deterministic."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kim" }]
keywords = ["github", "repository", "analysis", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
mcp = ["fastmcp>=0.1"]
all = ["repocrunch[api,mcp]"]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
repocrunch = "repocrunch.cli:app"

[project.urls]
Homepage = "https://github.com/repocrunch/repocrunch"
Repository = "https://github.com/repocrunch/repocrunch"

[tool.hatch.build.targets.wheel]
packages = ["src/repocrunch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
